# CLAUDECODE_MBO

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Dockerfile.cpu  docker-compose.yml  pyproject.toml  version.txt
.streamlit/: secrets.toml
data/optuna_studies/: optimization.db
docs/: 01_MBO_Trading_Strategy_Analyzer_Dokumentacio.md  02_Fejlec_es_Navigacio.md  03_Data_Loading_Tab.md  04_Analysis_Tab.md  05_Auto_Execution_Window.md  06_Results_Tab.md  07_Comparison_Tab.md  08_Inspection_Tab.md  09_Performance_Test_Tab.md  10_Application_Log_es_Osszefoglalo.md  ADIDA_MODEL_VALIDATION_REPORT.md  ARIMA_MODEL_VALIDATION_REPORT.md  BATCH_MODELS_VALIDATION_REPORT.md  BATCH_MODE_IMPLEMENTATION_PLAN.md  BATCH_TEST_VALIDATION_REPORT_2026-01-04.md  GPU_OPTIMIZATION_REPORT_2026-01-05.md  HIBAJAVITAS_JELENTES_2026-01-06.md  MODEL_IMPLEMENTATION_GUIDE.md  MODEL_IMPLEMENTATION_TEMPLATE.md  PROJECT_STRUCTURE.md  diffusion_forecast_1w_bug_report.md  fix_memory_issue_engine.md  model_forecasting_analysis.md  model_validation_test_plan.md  python_environment_report.md  test_run_report_20260113.md
docs/refactoring_docs/: all_src_files.txt  feladatok.md  gyoker_audit.md  kodbazis_struktura.md  megvalositasi_terv.md
scripts/: release.bat  release.py
src/: __init__.py  auto.txt  clear_pycache.bat  clear_pycache.ps1  main.py  main_debug.py  version.txt
src/MT5/: .last_ea_values.json  .window_position.json  __init__.py  mt5_gui.py  mt5_tester.py  report_generator.py
src/analysis/: __init__.py  dual_executor.py  dual_task.py  (+6 more)
tests/: test_adida_model.py  test_arima_model.py
(+142 files in other folders)
